<resources>
    <string name="app_name">SuMaMatcher App</string>
    <string name="title_activity_settings">Configuración</string>
    <string name="camera_header">Ajustes generales</string>
    <string name="previewsize_title">Resolución</string>
    <string name="alpr_header">Ajustes del detector</string>
    <string name="topresults_title">Nº resultados</string>
    <string name="minconfidence_title">Minima confiabilidad</string>
    <string name="country_title">País/Región</string>
    <string name="message_deletehistory">Se borrará el historial registrado hasta el momento. Está acción no se puede deshacer ¿Continuamos con el borrado?</string>
    <string name="title_deletehistory">Borrado historial</string>
    <string name="title_yes">Sí</string>
    <string name="title_no">No</string>
    <string name="title_history_activity">Historial</string>
    <string name="title_detail_activity">Detalle</string>
    <string name="button_label_continue">Continuar</string>
    <string name="button_label_stop">Detener</string>
    <string name="button_label_init">Iniciar</string>
    <string name="title_log_activity">Historial</string>
    <string name="title_plateinfo_activity">Matrículas</string>
    <string name="lblPlate">Matrícula</string>
    <string name="lblInfo">Información:</string>
    <string name="option_config">Configuración</string>
    <string name="option_viewhistory">Ver historial</string>
    <string name="option_help">Ayuda</string>
    <string name="option_viewplatesinfo">Ver matrículas</string>
    <string name="option_loadfile">Leer fichero</string>
    <string name="option_deleteplates">Borrar matrículas</string>
    <string name="option_deletehistory">Borrar historial</string>
    <string name="help_url">https://administracionelectronica.gob.es/ctt/sumamatcher</string>
    <string name="chosen_size">Resolución seleccionada: </string>
    <string name="function_mode_title">Modo de funcionamiento</string>
    <string name="timeskip_title">Tiempo misma matrícula</string>
    <string name="timewait_title">Tiempo entre matrícula</string>
    <string name="title_deleteinfoplates"> Borrado información matrículas </string>
    <string name="text_to_speech_title"> Texto a voz </string>
    <string name="message_deleteinfoplates">Se borrará la información registrada. Está acción no se puede deshacer ¿Continuamos con el borrado? </string>
    <string name="message_infoplates"> No hay información almacenada. Puede cargar un fichero con matrículas (hotlist) desde el menú superior </string>
    <string name="message_history"> No hay historial. Aquí verá el resultado de las detecciones de matrículas realizadas. </string>
    <string name="message_camera_permission">Para ejecutar la app es necesario usar la camara</string>
    <string name="lblDate">Fecha:</string>
    <string name="lblConfidence">Confianza:</string>
    <string name="message_warning_onlyvertical">Aviso. Está versión solo soporta la camara en posición vertical</string>
    <string name="message_error_nomode_oncall">El modo de funcionamiento no se ha establecido correctamente. Manual (código 0) o Automático (código 1).</string>
    <string name="message_plate_detected">Imagen %d. Matrícula detectada %s en %.2f seg. (%d intentos)</string>
    <string name="message_plate_nodetected">\"Imagen %d. No se han detectado matrículas. Tiempo: %.2f (%d intentos). \"</string>
    <string name="message_plate_noinfo">No hay datos registrados</string>
    <string name="lblImage">Imagen:</string>
    <string name="lblHora">Hora</string>
    <string name="lblExpires">Caducidad</string>
    <string name="plate_sample">9999ZZZ</string>
    <string name="imageview_description">TODO</string>
    <string name="default_info_description">...</string>
    <string name="todo">TODO</string>
    <string name="debug_header">Opciones de desarrollo</string>
    <string name="debug_title">Depuracion</string>
    <string name="colormode_title">Modo de color</string>
    <string name="message_error_date">\"Error. fecha incorrecta. Debe estar en formato dd/MM/yyyy. Línea de fichero \"</string>
    <string name="zoom_title">Zoom</string>
    <string name="option_newentry" >Nuevo</string>
    <string name="message_error_plateinfo">Debe indicar la información asociada a la matrícula. (10 a 60 caracteres).</string>
    <string name="message_error_plate">Debe indicar la matrícula. (De 5 a 8 caracteres)</string>
    <string name="button_label_cancel">Cancelar</string>
    <string name="button_label_accept">Aceptar</string>
    <string name="message_error_expires">Debe indicar una fecha valida en formato dd/mm/aaaa</string>
    <string name="button_label_delete">Borrar</string>
</resources>